NTI-334 - stopgap for condition where too many videos causes the poster image to scale too large for the screen size

--- a/src/main/resources/scss/debris/course/components/_overview-video-carousel.scss
+++ b/src/main/resources/scss/debris/course/components/_overview-video-carousel.scss
@@ -61,7 +61,8 @@
 .videos-carousel-dots {
 	text-align: center;
 	white-space: nowrap;
-
+	max-width: 100vw;
+	
 	a {
 		display: block;
 		width: 0.75rem;
